--- a/templates/success_booking.html
+++ b/templates/success_booking.html
@@ -1,38 +1,47 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
-    <div class="row justify-content-center" style="height: 100vh;">
-        <div class="card col-md-8 text-center">
-            <h1>Reservation completed successfully!</h1>
-            <p>Thank you for choosing our hotel. Your booking was successful.</p>
-            <p>You can view the details of your reservation below:</p>
-
-            <div class="reservation-details">
-                <p>City: {{ booking.room.hotel.city.city_name }}</p>
-                <p>Hotel: {{ booking.room.hotel.hotel_name }}</p>
-                <p>Room: {{ booking.room.room_name }}</p>
-                <p>Check-in Date: {{ booking.checking_date }}</p>
-                <p>Check-out Date: {{ booking.checkout_date }}</p>
-                <p>Price: {{ booking.room.price }} €</p>
-                {% if booking.is_cancelled %}
-                <p>Status: Cancelled</p>
-                {% else %}
-                    <div class="button-container justify-content-center">
-                        <a href="{% url 'edit_booking' booking.id %}" class="btn btn-primary">Edit
-                            Booking</a>
-                        <button class="btn btn-danger cancel-booking-button" data-bs-toggle="modal"
-                            data-bs-target="#confirmModal{{ booking.id }}">Cancel Booking</button>
+<section class="section bg-white"> 
+    <div class="container mt-3 mb-4">
+        <h2 class="text-9 text-center fw-500">Reservation completed successfully!</h2>
+        <p class="text-9 text-center">Thank you for choosing our hotel. Your booking was successful.</p>
+        <p class="text-9 text-center">You can view the details of your reservation below:</p>
+        <div class="row">
+            <div class="col-md-6 mx-auto" >
+                <div class="card shadow mb-4 rounded-4">
+                    <div class="card-body">
+                        <div class="reservation-details">
+                            <p>City: {{ booking.room.hotel.city.city_name }}</p>
+                            <p>Hotel: {{ booking.room.hotel.hotel_name }}</p>
+                            <p>Room: {{ booking.room.room_name }}</p>
+                            <p>Check-in Date: {{ booking.checking_date }}</p>
+                            <p>Check-out Date: {{ booking.checkout_date }}</p>
+                            <p>Price: {{ booking.room.price }} €</p>
+                            {% if booking.is_cancelled %}
+                            <p>Status: Cancelled</p>
+                            {% else %}
+                                <div class="button-container justify-content-center">
+                                    <a href="{% url 'edit_booking' booking.id %}" class="btn btn-primary">Edit
+                                        Booking</a>
+                                    <button class="btn btn-danger cancel-booking-button" data-bs-toggle="modal"
+                                        data-bs-target="#confirmModal{{ booking.id }}">Cancel Booking</button>
+                                </div>
+                            {% endif %}
+                        </div>
+                        <br>
+                        <div>
+                            <p>Alternatively, you can also view your booking on the
+                                <a href="{% url 'my_booking' %}">My booking</a> page. 
+                            If you prefer, you can make another selection by navigating to the main menu
+                            <a href="{% url 'home' %}">here</a>.
+                            </p>
+                            </p>
+                        </div>
                     </div>
-                {% endif %}
+                </div> 
             </div>
-            <div>
-                <p>Alternatively, you can also view your booking on the
-                    <a href="{% url 'my_booking' %}">My booking</a> page.
-                </p>
-             </div>
         </div>
-    </div> 
+    </div>
 </div>
 <div class="modal fade" id="confirmModal{{ booking.id }}" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
@@ -54,4 +63,5 @@
         </div>
     </div>
 </div>
+<!-- ----------------------------------------------- -->
 {% endblock %}
