--- a/static/css/style.css
+++ b/static/css/style.css
@@ -85,7 +85,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0);
+  background: rgba(0, 0, 0, 0,7);
   z-index: 1;
 }
 
@@ -100,6 +100,12 @@ body {
   height: 400px;
   width: 100%;
   object-fit: cover;
+}
+
+.custom-caption {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .image-flash {
