--- a/templates/my_booking.html
+++ b/templates/my_booking.html
@@ -21,7 +21,7 @@
                                     Hotel: {{ booking.room.hotel.hotel_name }}
                                 </p>
                                 <p class="card-text">Room: {{ booking.room.room_name }}</p>
-                                <p class="card-text">Price: {{ booking.room.price }} €</p>
+                                <p class="card-text">Total Price: {{ booking.total_price }} €</p>
                                 <p class="card-text">
                                     Check-in Date: {{ booking.checking_date }}
                                 </p>
