--- a/static/css/style.css
+++ b/static/css/style.css
@@ -272,3 +272,15 @@ body {
   font-weight: bold;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
+
+
+.card-body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-img-top {
+  flex: 1;
+  object-fit: cover;
+}
