--- a/templates/edit_booking.html
+++ b/templates/edit_booking.html
@@ -7,66 +7,13 @@
             <div class="col-md-6 mx-auto" >
                 <div class="card shadow mb-4 rounded-4">
                     <div class="card-body">
-                        <form method="post" action="{% url 'edit_booking' booking.id %}">
+                        <form method="post" action="{% url 'edit_booking' booking.id %}" class="needs-validation">
                             {% csrf_token %}
                             <p>City: {{ booking.room.hotel.city.city_name }}</p>
                             <p>Hotel: {{ booking.room.hotel.hotel_name }}</p>
                             <p>Room: {{ booking.room.room_name }}</p>
                             <div class="row">
-                                <div class="col-md-6 mb-3">
-                                    {{ form.first_name.label_tag }}
-                                    {{ form.first_name }}
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    {{ form.last_name.label_tag }}
-                                    {{ form.last_name }}
-                                </div>
-                            </div>
-                            
-                            <div class="row">
-                                <div class="col-md-6 mb-3">
-                                    {{ form.checking_date.label_tag }}
-                                    {{ form.checking_date }}
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    {{ form.checkout_date.label_tag }}
-                                    {{ form.checkout_date }}
-                                </div>
-                            </div>
-                            
-                            <div class="row">
-                                <div class="col-md-6 mb-3">
-                                    {{ form.phone_number.label_tag }}
-                                    {{ form.phone_number }}
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    {{ form.email.label_tag }}
-                                    {{ form.email }}
-                                </div>
-                            </div>
-                            
-                            <div class="row">
-                                <div class="col-md-3 mb-3">
-                                    {{ form.people_count.label_tag }}
-                                    {{ form.people_count }}
-                                </div>
-                                <div class="col-md-3 mb-3">
-                                    {{ form.children_count.label_tag }}
-                                    {{ form.children_count }}
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    {{ form.children_ages.label_tag }}
-                                    {{ form.children_ages }}
-                                </div>
-                            </div>
-                            
-                            <p class="mb-3">Do you need a baby crib in the room? (It's complimentary)</p>
-                            <div class="d-block my-3">
-                                {{ form.child_bed }}
-                            </div>
-                            <p class="mb-3">Do you need the services of a playroom for children? (It's complimentary)</p>
-                            <div class="d-block my-3">
-                                {{ form.playroom_services }}
+                                {{ form.as_p }}
                             </div>
                             <button type="submit" class="btn btn-primary">Save Changes</button>
                         </form>
