--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
                             </div>
                         </div>
                         <div class="col-lg-3">
-                            <button type="submit" class="btn btn-primary btn-block">Search</button>
+                            <button type="submit" class="btn btn-primary btn-block custom-search-btn">Search</button>
                         </div>
                     </div>
                 </form>
@@ -90,7 +90,6 @@
 </section>
 
 <!-- ------------------------------------------ -->
-
 
 <!-- ------------------------------------------ -->
 <section class="section bg-white">
