--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -102,7 +102,7 @@
             <!-- Booking Button -->
             <a href="{% url 'book_room' room.slug %}" class="btn btn-primary"
               {% if not user.is_authenticated %}
-                data-bs-toggle="modal" data-bs-target="#loginModal"{% endif %}>Booking now</a>
+                data-bs-toggle="modal" data-bs-target="#loginModal"{% endif %}>Book now</a>
           </div>
         </div>
       </div>
