--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,10 +35,7 @@ body {
   background-color: #fff;
 }
 
-.card {
-  border: 1px solid rgb(213, 210, 210);
-  background-color: transparent;
-}
+
 
 .image-container {
   position: relative;
@@ -53,6 +50,8 @@ body {
 .Price,
 .City {
   color: #fff;
+  font-weight: bold;
+  font-size: 1.2em;
 }
 
 .navbar {
@@ -112,8 +111,8 @@ body {
   position: absolute;
   bottom: 5%;
   min-width: 30%;
-  left: -2px;
-  background-color:#013b94;
+  left: 10px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
 .image-flash-top-right {
@@ -127,7 +126,7 @@ body {
   position: absolute;
   top: 5%;
   min-width: 30%;
-  left: -2px;
+  left: 10px;
   background-color: transparent;
   color: white;
   font-size: 1.5em;
@@ -139,7 +138,7 @@ body {
   position: absolute;
   top: 5%;
   min-width: 30%;
-  left: -2px;
+  left: 10px;
   background-color: transparent;
   color: white;
   font-size: 1.5em;
@@ -262,9 +261,6 @@ body {
   color: white;
 }
 
-.card-size {
-  height: 100%;
-}
 
 .Likes, .far.fa-heart {
   color: #ffc107;
@@ -273,14 +269,42 @@ body {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
+.custom-search-btn {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.card {
+  border: 1px solid rgb(213, 210, 210);
+  background-color: transparent;
+}
 
 .card-body {
-  height: 100%;
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 .card-img-top {
   flex: 1;
   object-fit: cover;
+}
+
+.card-size {
+  margin-bottom: 20px !important;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.footer a i {
+  color: white;
+  font-size: 36px;
+}
+
+.footer a {
+  text-decoration: none;
 }
