--- a/templates/base.html
+++ b/templates/base.html
@@ -108,12 +108,19 @@
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 blue-bg">
-      <p class="m-0 text-center text-white"></p>
       <p class="m-0 text-center text-white">
-        Follow us: <i class="fab fa-facebook-square ms-3"></i>
-        <i class="fab fa-twitter-square ms-3"></i>
-        <i class="fab fa-instagram-square ms-3"></i>
-        <i class="fab fa-youtube-square ms-3"></i>
+        <a href="https://www.facebook.com/" target="_blank" class="ms-3">
+          <i class="fab fa-facebook-square"></i>
+        </a>
+        <a href="https://twitter.com/" target="_blank" class="ms-3">
+          <i class="fab fa-twitter-square"></i>
+        </a>
+        <a href="https://www.instagram.com/" target="_blank" class="ms-3">
+          <i class="fab fa-instagram-square"></i>
+        </a>
+        <a href="https://www.youtube.com/" target="_blank" class="ms-3">
+          <i class="fab fa-youtube-square"></i>
+        </a>
       </p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
