--- a/templates/my_booking.html
+++ b/templates/my_booking.html
@@ -18,18 +18,18 @@
                                     City: {{ booking.room.hotel.city.city_name }}
                                 </h5>
                                 <p class="card-text">
-                                    Hotel: {{ booking.room.hotel.hotel_name }}
+                                    <strong>Hotel:</strong> {{ booking.room.hotel.hotel_name }}
                                 </p>
-                                <p class="card-text">Room: {{ booking.room.room_name }}</p>
-                                <p class="card-text">Total Price: {{ booking.total_price }} €</p>
+                                <p class="card-text"><strong>Room:</strong> {{ booking.room.room_name }}</p>
+                                <p class="card-text"><strong>Total Price:</strong> € {{ booking.total_price }}</p>
                                 <p class="card-text">
-                                    Check-in Date: {{ booking.checking_date }}
-                                </p>
-                                <p class="card-text">
-                                    Check-out Date: {{ booking.checkout_date }}
+                                    <strong>Check-in Date:</strong> {{ booking.checking_date }}
                                 </p>
                                 <p class="card-text">
-                                    Status: {% if booking.is_cancelled %}
+                                    <strong>Check-out Date:</strong> {{ booking.checkout_date }}
+                                </p>
+                                <p class="card-text">
+                                    <strong>Status:</strong> {% if booking.is_cancelled %}
                                     <span class="text-danger">Cancelled</span>
                                     {% else %}
                                     <span class="text-success">Active</span>
