Update img on carousel

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,21 +7,21 @@
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner rounded-4">
             <div class="carousel-item active">
-                <img src="{% static 'images/hero-bg.webp' %}" class="d-block w-100 responsive-img" alt="...">
+                <img src="{% static 'images/hero-bg.webp' %}" class="d-block w-100 responsive-img">
                 <div class="carousel-caption d-none d-md-block custom-caption">
                     <h1>Dublin - the capital of history and fun</h1>
                     <h4>Discover a rich cultural heritage and lively music.</h4>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="{% static 'images/cork.webp' %}" class="d-block w-100 responsive-img" alt="...">
+                <img src="{% static 'images/cork.webp' %}" class="d-block w-100 responsive-img">
                 <div class="carousel-caption d-none d-md-block custom-caption">
                     <h1>Cork - the city of art and delicious food</h1>
                     <h4>Immerse yourself in cultural diversity and culinary delights.</h4>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="{% static 'images/limerick.webp' %}" class="d-block w-100 responsive-img" alt="...">
+                <img src="{% static 'images/limerick.webp' %}" class="d-block w-100 responsive-img">
                 <div class="carousel-caption d-none d-md-block custom-caption">
                     <h1>Limerick - where history and modernity blend</h1>
                     <h4>Explore ancient landmarks and contemporary art.</h4>
