--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,12 @@
 body {
     background-color: #fff;
+    padding-top: 56px;
 }
+
+main {
+  padding-top: 60px;
+}
+
 
 
 .container-fluid,
@@ -56,6 +62,10 @@ body {
 
 .navbar {
   padding: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
 }
 
 .navbar-brand {
