Add correct calculation total coast

--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -80,7 +80,7 @@
         <div class="col-12 mt-3 mb-3">
           <h3 class="post-title">{{ hotel.hotel_name }}</h3>
           <h2 class="post-title">{{ room.room_name }}</h2>
-          <img src="{{ room.room_image.url }}" alt="{{ room.room_image.url }}" class="img-fluid">
+          <img src="{{ room.room_image.url }}" alt="{{ room.room_image.url }}" class="img-fluid rounded-2">
         </div>
         <div class="col card mb-4 mt-3 left top">
           <div class="card-body">
