--- a/templates/hotel_detail.html
+++ b/templates/hotel_detail.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="col-12 mt-3 mb-3">
                     <h3 class="post-title">{{ hotel.hotel_name }}</h3>
-                    <img src="{{ hotel.hotel_image.url }}" alt="{{ hotel.hotel_name }}" class="img-fluid">
+                    <img src="{{ hotel.hotel_image.url }}" alt="{{ hotel.hotel_name }}" class="img-fluid rounded-2">
                 </div>
             </div>
         </div>
