--- a/templates/index.html
+++ b/templates/index.html
@@ -99,6 +99,7 @@
             <div class="col-12 mt-3 left">
                 <div class="row">
                 {% for room in rooms%}
+                {% if room.on_main %}
                     <div class="col-md-4">
                         <div class="card-size  h-100">
                             <div class="card card-body d-flex flex-column shadow mt-3 mb-3 rounded-4">
@@ -128,6 +129,7 @@
                             </div>
                         </div>
                     </div>
+                    {% endif %}
                     {% if forloop.counter|divisibleby:3 %}
                 </div>
                 <div class="row">
