--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -84,7 +84,21 @@
         </div>
         <div class="col card mb-4 mt-3 left top">
           <div class="card-body">
-            <!-- Room Description -->
+              <div class="container mt-5">
+                <h4>Facilities:</h4>
+                <div class="row">
+                    {% for facility in room.facilities.all %}
+                        <div class="col-md-3 mb-1">
+                            <div class="card">
+                                <div class="card-body text-center">
+                                    <p class="mt-0">{{ facility.name }}</p>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+              <!-- Room Description -->
             <p class="card-text">{{ room.description_room | safe }}</p>
             <!-- Likes and Comments -->
             <div class="row">
