--- a/templates/city_hotels.html
+++ b/templates/city_hotels.html
@@ -62,5 +62,26 @@
             {% endfor %}
         </div>
     </div>
+    {% if hotels.has_other_pages %}
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if hotels.has_previous %}
+                <li><a href="?page={{ hotels.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+            {% endif %}
+            {% for i in hotels.paginator.page_range %}
+                {% if hotels.number == i %}
+                    <li class="page-item active" aria-current="page">
+                        <span class="page-link">{{ i }}<span class="sr-only">(current)</span></span>
+                    </li>
+                {% else %}
+                    <li class="page-item"><a href="?page={{ i }}" class="page-link">{{ i }}</a></li>
+                {% endif %}
+            {% endfor %}
+            {% if hotels.has_next %}
+                <li><a href="?page={{ hotels.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+            {% endif %}
+        </ul>
+    </nav>
+    {% endif %}
 </div>
 {% endblock content %}
