Add new section on home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,29 @@
 </section>
 
 <!-- ------------------------------------------ -->
-
+<section class="section bg-white">
+    <div class="container text-center mt-5">
+        <h2 class="text-9 fw-500">Why Book with Us?</h2>
+        <div class="row">
+            <div class="col-md-4 card  d-flex flex-column card-info">
+                <img src="{% static 'images/advantage1.webp' %}" alt="Advantage 1" class="img-fluid mb-3">
+                <h4>Best Price Guarantee</h4>
+                <p>Find a lower price online and we'll match it!</p>
+            </div>
+            <div class="col-md-4 card  d-flex flex-column card-info">
+                <img src="{% static 'images/advantage2.webp' %}" alt="Advantage 2" class="img-fluid mb-3">
+                <h4>Exclusive Deals</h4>
+                <p>Access special discounts and offers when you book with us.</p>
+            </div>
+            <div class="col-md-4 card  d-flex flex-column card-info">
+                <img src="{% static 'images/advantage3.webp' %}" alt="Advantage 3" class="img-fluid mb-3">
+                <h4>Flexible Booking Options</h4>
+                <p>Enjoy the flexibility to modify or cancel your reservation.</p>
+            </div>
+        </div>
+    </div>
+</section>
+</section>
 <!-- ------------------------------------------ -->
 <section class="section bg-white">
     <div class="container text-center mt-5">
