--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -5,27 +5,30 @@
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
+{% load static %}
 {% block content %}
 
 <div class="container">
     <div class="row">
-        <div class="col-md-8 mt-3 offset-md-2">
+        <div class="col-md-12 text-center  mt-5">
             <h3>{% trans "Sign In" %}</h3>
-
             <p>{% blocktrans %}If you have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
                 first.{% endblocktrans %}</p>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-8 mt-3 offset-md-2">
-            <form class="login" method="POST" action="{% url 'account_login' %}">
+        <div class="col-md-6 d-flex align-items-center justify-content-center">
+            <form class="login card  shadow p-3 pt-5 " method="POST" action="{% url 'account_login' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="btn btn-signup right" type="submit">{% trans "Sign In" %}</button>
+                <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
             </form>
+        </div>
+        <div class="col-md-6 card-body  align-items-center justify-content-center">
+            <img src="{% static 'images/sign-in.webp' %}"  alt="Sign In Image" class="img-fluid" style="max-width: 80%; height: auto;">
         </div>
     </div>
 </div>
