--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,29 +1,29 @@
 {% extends "base.html" %}
 
 {% load i18n %}
+{% load account socialaccount %}
 
-{% block head_title %}{% trans "Sign Out" %}{% endblock %}
+{% block head_title %}{% trans "Sign In" %}{% endblock %}
 
+{% load static %}
 {% block content %}
+
 <div class="container">
     <div class="row">
-        <div class="col-md-8 mt-3 offset-md-2">
+        <div class="col-md-12 text-center  mt-5">
             <h3>{% trans "Sign Out" %}</h3>
-
             <p>{% trans 'Are you sure you want to sign out?' %}</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-8 mt-3 offset-md-2">
-
             <form method="post" action="{% url 'account_logout' %}">
                 {% csrf_token %}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="btn btn-signup right" type="submit">{% trans 'Sign Out' %}</button>
+                <button class="btn btn-primary" type="submit">{% trans 'Sign Out' %}</button>
             </form>
         </div>
+    </div>
+    <div class="col-md-12 card-body  align-items-center justify-content-center">
+        <img src="{% static 'images/sign-out.webp' %}"  alt="Sign In Image" class="img-fluid" style="max-width: 40%; height: auto;">
     </div>
 </div>
 {% endblock %}
