--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -3,11 +3,11 @@
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
-
+{% load static %}
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-md-8 mt-3 offset-md-2">
+        <div class="col-md-12 text-center  mt-5">
             <h3>{% trans "Sign Up" %}</h3>
 
             <p>{% blocktrans %} Do you already have an account? Then please <a
@@ -15,17 +15,21 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-8 mt-3 offset-md-2">
-            <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+        <div class="col-md-6 d-flex align-items-center justify-content-center">
+            <form class="login card  shadow p-3 pt-5 " method="POST" action="{% url 'account_signup' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="btn btn-signup right" type="submit">{% trans "Sign Up" %} &raquo;</button>
+                <button class="btn btn-primary" type="submit">{% trans "Sign Up" %} &raquo;</button>
             </form>
+        </div>
+        <div class="col-md-6 card-body  align-items-center justify-content-center">
+            <img src="{% static 'images/sign-up.webp' %}"  alt="Sign In Image" class="img-fluid" style="max-width: 80%; height: auto;">
         </div>
     </div>
 </div>
 
 {% endblock %}
+
